@@ -82,6 +82,7 @@ enum client_types {
 	ESamsungSeriesA,
 	ESamsungSeriesB,
 	EMarantzDMP,
+	ELifeTab,
 	EStandardDLNA150 = 100
 };
 
